--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
-name = PlaceNL
-version = attr: PlaceNL.__version__
-description = PlaceNL: Reddit /r/place 2022 bot that automatically sets pixels
+name = PlaceAutism
+version = attr: PlaceAutism.__version__
+description = PlaceAutism: Reddit /r/place 2022 bot that automatically sets pixels
 long_description = file: README.md
 keywords = reddit
 license = MIT license
@@ -12,7 +12,7 @@ classifiers =
     Environment :: Console
 
 [options]
-py_modules = PlaceNL
+py_modules = PlaceAutism
 install_requires =
     numpy
     matplotlib
@@ -21,4 +21,4 @@ install_requires =
 
 [options.entry_points]
 console_scripts =
-    PlaceNL = PlaceNL:run
+    PlaceAutism = PlaceAutism:run
